--- a/Mision2.ipynb
+++ b/Mision2.ipynb
@@ -69,6 +69,45 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "gross                      1.000000\n",
+      "num_user_for_reviews       0.553019\n",
+      "num_critic_for_reviews     0.462919\n",
+      "movie_facebook_likes       0.363006\n",
+      "actor_3_facebook_likes     0.282837\n",
+      "duration                   0.245669\n",
+      "actor_2_facebook_likes     0.243022\n",
+      "imdb_score                 0.202076\n",
+      "actor_1_facebook_likes     0.145977\n",
+      "director_facebook_likes    0.139531\n",
+      "budget                     0.100908\n",
+      "aspect_ratio               0.069021\n",
+      "title_year                 0.031327\n",
+      "Name: gross, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Usar análisis de correlación y gráficos completos para identificar las variables predictoras relevantes.\n",
+    "\n",
+    "# Calcular la matriz de correlación\n",
+    "correlation_matrix = data.corr()\n",
+    "\n",
+    "# Filtrar las correlaciones con respecto a la variable 'gross'\n",
+    "gross_correlation = correlation_matrix['gross'].sort_values(ascending=False)\n",
+    "\n",
+    "# Mostrar las correlaciones\n",
+    "print(gross_correlation)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "id": "J26KNStBUI68"
@@ -81,14 +120,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "id": "ENP7QsG9UOGW"
    },
    "outputs": [],
    "source": [
     "#Definir variables predictoras y variable objetivo\n",
+    "\"\"\"\n",
+    "Revisar la anterior celda que les dejé para ver cuáles son las variables que tienen mayor \n",
+    "correlación con la variable objetivo\n",
     "x= data[['budget', 'num_critic_for_reviews', 'actor_1_facebook_likes']]\n",
+    "\"\"\"\n",
     "y= data['gross']"
    ]
   },
